--- a/src/index.scss
+++ b/src/index.scss
@@ -30,3 +30,14 @@ p {
   gap: 1rem;
   align-items: flex-start;
 }
+
+.input-group {
+  margin-bottom: 1rem;
+}
+
+input[type="number"] {
+  display: block;
+  width: 100%;
+  padding: 0.25rem 0.5rem;
+  font: inherit;
+}
